meeting validation in place and working as expected
