# swagger.json
@@ -245,6 +245,39 @@
         }
       }
     },
+    "/meetings/month/{month}/{year}": {
+      "get": {
+        "tags": [
+          "Meetings"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "month",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "year",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/meetings/{id}": {
       "get": {
         "tags": [
@@ -339,36 +372,6 @@
           },
           "404": {
             "description": "Not Found"
-          }
-        }
-      }
-    },
-    "/meetings/month/{month}/{year}": {
-      "get": {
-        "tags": [
-          "Meetings"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "month",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "year",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         }
       }
